assets/scss/main.scss
@layer tailwind-base, primevue, tailwind-utilities;

@layer tailwind-base {
  @tailwind base;
}

@layer tailwind-utilities {
  @tailwind components;
  @tailwind utilities;
}

@import "primeicons/primeicons.css";

@font-face {
  font-family: 'Nunito';
  src: url('/assets/fonts/Nunito-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Nunito';
  src: url('/assets/fonts/Nunito-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Nunito';
  src: url('/assets/fonts/Nunito-ExtraBold.ttf') format('truetype');
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: 'Nunito';
  src: url('/assets/fonts/Nunito-Black.ttf') format('truetype');
  font-weight: 900;
  font-style: normal;
}

body {
  margin: 0;
  background-color: var(--p-content-background);
  font-family: 'Nunito', sans-serif;
}

:root {
  --p-menubar-gap: 1.5rem;
  --p-menubar-background: var(--p-primary-500);
}

.p-menubar-item-link.route-active {
  background: var(--p-surface-900);
  border-radius: var(--p-button-border-radius);
  color: var(--p-primary-500);
}

@media (prefers-color-scheme: dark) {
  :root {
    --p-menubar-background: var(--p-dark-primary-900);
  }

  .p-menubar-item-link.route-active {
    background: var(--p-primary-500);
    color: var(--p-surface-900);
  }
}

.p-menubar {
  gap: var(--p-menubar-gap);
}

// Page transition
.slide-enter-active, .slide-leave-active {
  transition: transform 0.15s ease-in-out, opacity 0.15s ease-in-out;
}

.slide-enter-from {
  opacity: 0;
  transform: translateX(20px);
}

.slide-leave-to {
  opacity: 0;
  transform: translateX(-20px);
}

